Add ability to change the content type on doubles.

--- a/config/rest-assured.yml
+++ b/config/rest-assured.yml
@@ -1,2 +1,4 @@
 paths:
-  "/events/1" : "config/data/events/1.json"
+  "/events/1" : 
+    file_location : "config/data/events/1.json"
+    content-type: "application/json"
