--- a/config/rest-assured.yml
+++ b/config/rest-assured.yml
@@ -2,3 +2,6 @@ paths:
   "/events/1" : 
     file_location : "config/data/events/1.json"
     content-type: "application/json"
+  "/events/3" : 
+    file_location : "config/data/events/3.json"
+    content-type: "application/json"
