--- a/config/rest-assured.yml
+++ b/config/rest-assured.yml
@@ -1,7 +1,7 @@
 paths:
   "/events/1" : 
-    file_location : "config/data/events/1.json"
+    file_location : "data/events/1.json"
     content-type: "application/json"
   "/events/3" : 
-    file_location : "config/data/events/3.json"
+    file_location : "data/events/3.json"
     content-type: "application/json"
