--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,6 @@
 development:
-  event_base_path: "http://localhost:7899/events/"
+  event_base_path: "http://127.0.0.1:7899/events/"
 test:
-  event_base_path: "http://localhost:6666/events/"
+  event_base_path: "http://127.0.0.1:6666/events/"
 production:
   event_base_path: "http://juicer.responsivenews.co.uk/api/events/"
