--- a/config/application.yml
+++ b/config/application.yml
@@ -1,9 +1,12 @@
 development:
   event_base_path: "http://127.0.0.1:7899/api/events/"
   rdf_base_path: "http://127.0.0.1:7899/rdf?identifier="
+  article_query_base_uri: "http://127.0.0.1:7899/api/articles?"
 test:
   event_base_path: "http://127.0.0.1:6666/api/events/"
   rdf_base_path: "http://127.0.0.1:6666/rdf?identifier="
+  article_query_base_uri: "http://127.0.0.1:6666/api/articles?"
 production:
   event_base_path: "http://juicer.responsivenews.co.uk/api/events/"
   rdf_base_path: "http://juicer.responsivenews.co.uk/rdf?identifier="
+  article_query_base_uri: "http://juicer.responsivenews.co.uk/api/articles?"
