--- a/config/rest-assured.yml
+++ b/config/rest-assured.yml
@@ -5,6 +5,9 @@ paths:
   "/rdf?identifier=http://dbpedia.org/resource/person_resource_name" : 
     file_location : "rest-assured/data/person_resource.xml"
     content-type: "application/rdf+xml"
+  "/rdf?identifier=http://dbpedia.org/resource/place_resource_name" : 
+    file_location : "rest-assured/data/place_resource.xml"
+    content-type: "application/rdf+xml"
   "/rdf?identifier=http://juicer.responsivenews.co.uk/events/1" : 
     file_location : "rest-assured/data/event_resource.xml"
     content-type: "application/rdf+xml"
@@ -14,3 +17,4 @@ paths:
   "/api/articles?binding=article&limit=5&where=?article%20%3Chttp://data.press.net/ontology/tag/mentions%3E%20%3Chttp://dbpedia.org/resource/person_resource_name%3E" : 
     file_location : "rest-assured/data/article_person_query.json"
     content-type: "application/json"
+
